whitespace on the right fixed

--- a/src/css/info.css
+++ b/src/css/info.css
@@ -1,5 +1,9 @@
 body{
-    margin: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    overflow-x: hidden;
     font-family: "M PLUS Rounded 1c", Tahoma, sans-serif;
 }
 .logo{
@@ -18,7 +22,7 @@ a {
     position: -webkit-sticky;
     left: 0;
     top: 0;
-    box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5);
+    box-shadow: -1px 10px 5px rgba(0, 0, 0, 0.216);
 }
 
 
